--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
     <div class="nav">
         <ul>
             <a class="active">Home</a>
-            <a href="#auctions">Auctions</a>
+            <a href="auctionList.html">Auctions</a>
             <a href="/login-page">Login</a>
             <a href="#contact">Contact</a>
         </ul>
