Hooked up some buttons to work for switching between web pages.

--- a/src/main/resources/templates/auctionList.html
+++ b/src/main/resources/templates/auctionList.html
@@ -9,7 +9,7 @@
 <header>
     <div class="nav">
         <ul>
-            <a href="index.html">Home</a>
+            <a href="/">Home</a>
             <h1> Auction Items</h1>
         </ul>
     </div>
