Html file for managing accounts

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,6 +21,7 @@
             <a class="active">Home</a>
             <a href="/auctions-page">Auctions</a>
             <a href="/login-page">Login</a>
+            <a href="/Create">Create</a>
             <a href="#contact">Contact</a>
         </ul>
     </div>
