--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -8,20 +8,30 @@
 <body>
     <h1>Old World Auction</h1>
     <form action="add" method="post">
-        <label for="name">Name: </label>
-        <input type="text" name="name"/> <br/>
+        <p>
+            <label for="name">Name: </label>
+            <input id= "name" type="text" name="name"/> <br/>
+        </p>
 
-        <label for="description">Description: </label>
-        <input type="text" name="description"/> <br/>
+        <p>
+            <label for="description">Description: </label>
+            <input id="description" type="text" name="description"/> <br/>
+        </p>
 
-        <label for="currentBid">Starting Bid: </label>
-        <input type="text" name="currentBid"/> <br/>
+        <p>
+            <label for="currentBid">Starting Bid: </label>
+            <input id="currentBid" type="text" name="currentBid"/> <br/>
+        </p>
 
-        <label for="color">Color: </label>
-        <input type="text" name="color"/> <br/>
+        <p>
+            <label for="color">Color: </label>
+            <input id="color" type="text" name="color"/> <br/>
+        </p>
 
-        <label for="manufacturedYear">Manufactured Year: </label>
-        <input type="text" name="manufacturedYear"/> <br/>
+        <p>
+            <label for="manufacturedYear">Manufactured Year: </label>
+            <input id="manufacturedYear" type="text" name="manufacturedYear"/> <br/>
+        </p>
 
         <button type="submit">Submit!</button>
     </form>
