--- a/src/main/resources/templates/auctionList.html
+++ b/src/main/resources/templates/auctionList.html
@@ -15,6 +15,9 @@
     </div>
 </header>
 <section>
+    <div class="gallery">
+
+    </div>
     <div class = "gallery">
         <div class = "content">
             <h3>Wide Crystal Chandelier</h3>
@@ -69,7 +72,7 @@
     </div>
 </section>
 
-<!--  <script src="script.js"></script>-->
+<script src = "/static/AuctionList.js"></script>
 
 <!--  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="light" position="bottom-right"></script>-->
 </body>
