Added functionality to add auction items to the database

--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Old World Auction</h1>
-    <form id="itemAddForm" action="add" method="post">
+    <form id="itemAddForm" action="/add" method="post">
         <p>
             <label for="name">Item Name: </label>
             <input id= "name" type="text" name="name"/> <br/>
@@ -58,7 +58,7 @@
 
     </form>
     <div style="text-align: center;">
-        <button form="itemAddForm" type="submit">Submit!</button>
+        <button form="itemAddForm" type="submit">Add Item</button>
     </div>
 </body>
 </html>
