Started implementation for login/registration system

--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -6,7 +6,8 @@
     <link th:href="@{/styling.css}" rel="stylesheet"/>
 </head>
 <body>
-    <h1>Old World Auction</h1>
+    <a href="/">Home</a>
+    <h1>Add Auction Item</h1>
     <form id="itemAddForm" action="/add" method="post">
         <p>
             <label for="name">Item Name: </label>
