--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,6 +20,7 @@
         <ul>
             <a class="active">Home</a>
             <a href="/auctions-page">Auctions</a>
+            <a href="/register-page">Register</a>
             <a href="/login-page">Login</a>
             <a href="/addItem">Create</a>
             <a href="#contact">Contact</a>
