--- a/src/main/resources/static/styling.css
+++ b/src/main/resources/static/styling.css
@@ -34,3 +34,10 @@ span {
     padding-left: 10px;
     color: red;
 }
+
+button {
+    width: 160px;
+    height: 50px;
+    border-radius: 1em;
+    background-color: limegreen;
+}
