Starting login implementation

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,6 +24,7 @@
             <a href="/login-page">Login</a>
             <a href="/addItem">Create</a>
             <a href="#contact">Contact</a>
+            <span style="float:right; color: white" th:text="${welcome}"></span>
         </ul>
     </div>
 </header>
