--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -67,7 +67,7 @@
 <body>
 <div class="register-container">
     <h2>Register to Old World Auction</h2>
-    <form action="/register" method="post">
+    <form action="/registration" method="post">
         <div class="form-group">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
@@ -84,5 +84,7 @@
     </form>
 </div>
 </body>
+<script>
 
+</script>
 </html>
