--- a/src/main/resources/templates/auctionList.html
+++ b/src/main/resources/templates/auctionList.html
@@ -5,6 +5,7 @@
     <title>Old World Auction</title>
     <link th:href="@{/auctionList.css}" rel="stylesheet"/>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
     <script th:inline="javascript">
         var items = /*[[${items}]]*/ [];
     </script>
@@ -43,10 +44,17 @@
                              <p>$${item.currentBid}</p>
                            <h6>${item.description}</h6>
                            <button class="buy-1">Buy Now</button>
-                           <button class="save" onclick="location.href='index.html'">Save</button>
+                           <button class="save" onclick="location.href='/getItem'">Save</button>
                            `;
 
                        auctionListDiv.appendChild(contentDiv);
+                   const buyButtons = document.querySelectorAll('.buy-1');
+                    buyButtons.forEach(function(buyButton) {
+                    buyButton.addEventListener('click', function() {
+
+                        window.location.href = '/getItem' ;
+            });
+        });
                    });
                }
 
@@ -68,58 +76,33 @@
     <div class="gallery">
 
     </div>
-    <div class = "gallery">
-        <div class = "content">
-            <h3>Wide Crystal Chandelier</h3>
-            <image src = Capture.PNG></image>
-            <p>$4235</p>
-            <h6>Schonbek Renaissance 24 Light 36" Wide Crystal Chandelier</h6>
-            <button class = "buy-1">Buy Now</button>
-            <button class = "save" a href="index.html"> Save</button>
-        </div>
-        <div class = "content">
-            <h3>Cheyenne Chesterfield Leather Sofa</h3>
-            <image src = sofa.png></image>
-            <p>$2100</p>
-            <h6>Cheyenne Chesterfield Leather Sofa</h6>
-            <button class = "buy-1"> Buy Now</button>
-            <button class = "save"> Save</button>
-        </div>
-        <div class = "content">
-            <h3>Cheyenne Chesterfield Leather Sofa</h3>
-            <image src = sofa.png></image>
-            <p>$2100</p>
-            <h6>Cheyenne Chesterfield Leather Sofa</h6>
-            <button class = "buy-1"> Buy Now</button>
-            <button class = "save"> Save</button>
-        </div>
-    </div>
-    <div class = "gallery">
-        <div class = "content">
-            <h3>Wide Crystal Chandelier</h3>
-            <image src = Capture.PNG></image>
-            <p>$4235</p>
-            <h6>Schonbek Renaissance 24 Light 36" Wide Crystal Chandelier</h6>
-            <button class = "buy-1"> Buy Now</button>
-            <button class = "save"> Save</button>
-        </div>
-        <div class = "content">
-            <h3>Cheyenne Chesterfield Leather Sofa</h3>
-            <image src = sofa.png></image>
-            <p>$2100</p>
-            <h6>Cheyenne Chesterfield Leather Sofa</h6>
-            <button class = "buy-1"> Buy Now</button>
-            <button class = "save"> Save</button>
-        </div>
-        <div class = "content">
-            <h3>Cheyenne Chesterfield Leather Sofa</h3>
-            <image src = sofa.png></image>>
-            <p>$2100</p>
-            <h6>Cheyenne Chesterfield Leather Sofa</h6>
-            <button class = "buy-1"> Buy Now</button>
-            <button class = "save"> Save</button>
-        </div>
-    </div>
+    <!--    <div class = "gallery">-->
+    <!--        <div class = "content">-->
+    <!--            <h3>Wide Crystal Chandelier</h3>-->
+    <!--            <image src = Capture.PNG></image>-->
+    <!--            <p>$4235</p>-->
+    <!--            <h6>Schonbek Renaissance 24 Light 36" Wide Crystal Chandelier</h6>-->
+    <!--            <button class = "buy-1">Buy Now</button>-->
+    <!--            <button class = "save" a href="index.html"> Save</button>-->
+    <!--        </div>-->
+    <!--        <div class = "content">-->
+    <!--            <h3>Cheyenne Chesterfield Leather Sofa</h3>-->
+    <!--            <image src = sofa.png></image>-->
+    <!--            <p>$2100</p>-->
+    <!--            <h6>Cheyenne Chesterfield Leather Sofa</h6>-->
+    <!--            <button class = "buy-1"> Buy Now</button>-->
+    <!--            <button class = "save"> Save</button>-->
+    <!--        </div>-->
+    <!--        <div class = "content">-->
+    <!--            <h3>Cheyenne Chesterfield Leather Sofa</h3>-->
+    <!--            <image src = sofa.png></image>-->
+    <!--            <p>$2100</p>-->
+    <!--            <h6>Cheyenne Chesterfield Leather Sofa</h6>-->
+    <!--            <button class = "buy-1"> Buy Now</button>-->
+    <!--            <button class = "save"> Save</button>-->
+    <!--        </div>-->
+    <!--    </div>-->
+
 </section>
 
 <!--  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="light" position="bottom-right"></script>-->
