--- a/src/main/resources/templates/getItem.html
+++ b/src/main/resources/templates/getItem.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<script src="https://js.stripe.com/v3/"></script>
 <head>
     <meta charset="UTF-8">
     <title>Item Details</title>
@@ -15,9 +16,8 @@
 </header>
 <section>
     <div id="item-details">
-<!--        <h3 th:text="${item.name}"></h3>-->
-<!--        <p th:text="'$' + ${item.price}"></p>-->
-<!--        <h6 th:text="${item.description}"></h6>-->
+        <h3 th:text="${item.name}"></h3>
+
     </div>
 </section>
 </body>
