--- a/src/main/resources/static/auctionList.css
+++ b/src/main/resources/static/auctionList.css
@@ -3,10 +3,6 @@ body{
     background: rgb(6, 6, 46);
     font-family: sans-serif;
 }
-header {
-    background-color: #333;
-    padding-top: 10px;
-  }
   h1{
     text-align: center;
     font-size: 40px;
@@ -63,7 +59,7 @@ h6{
     color: #58616b;
     margin-top: 2px;
 }
-ul{
+ul:not(.headerNav){
     list-style: none;
     display: flex;
     justify-content: center;
@@ -104,4 +100,8 @@ button{
 }
 .save{
  background: #ff9f43;
+}
+
+h1 {
+ color: white;
 }
