--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -77,10 +77,10 @@
             <input type="password" id="password" name="password" required>
         </div>
         <div class="form-group">
-            <label for="confirmPassword">Password:</label>
+            <label for="confirmPassword">Confirm Password:</label>
             <input type="password" id="confirmPassword" name="confirmPassword" required>
         </div>
-        <input type="submit" value="Login">
+        <input type="submit" value="Register">
     </form>
 </div>
 </body>
