--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,51 @@
     <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap" rel="stylesheet">
     <title>Home</title>
     <link th:href="@{/style.css}" rel="stylesheet"/>
+    <style>
+        /* Dropdown Button */
+        .dropbtn {
+          background-color: #04AA6D;
+          color: white;
+          padding: 16px;
+          font-size: 16px;
+          border: none;
+        }
+
+        /* The container <div> - needed to position the dropdown content */
+        .dropdown {
+          padding-right: 20px;
+          position: relative;
+          display: inline-block;
+        }
+
+        /* Dropdown Content (Hidden by Default) */
+        .dropdown-content {
+          display: none;
+          position: fixed;
+          background-color: black;
+          min-width: 160px;
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+          z-index: 1;
+        }
+
+        /* Links inside the dropdown */
+        .dropdown-content a {
+          min-width: 120px;
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+        }
+
+        /* Change color of dropdown links on hover */
+        .dropdown-content a:hover {background-color: #ddd;}
+
+        /* Show the dropdown menu on hover */
+        .dropdown:hover .dropdown-content {display: block;}
+
+        /* Change the background color of the dropdown button when the dropdown content is shown */
+        .dropdown:hover .dropbtn {background-color: #3e8e41;}
+    </style>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             fetch("/loggedUser")
@@ -25,10 +70,17 @@
         });
 
         function displayUser(user){
-            const userSpan = document.getElementById("user");
-            userSpan.innerHTML = "";
+            const userDiv = document.getElementById("user");
+            userDiv.innerHTML = "";
             if(user.username != "") {
-                userSpan.innerHTML = "Welcome, " + user.username;
+                userDiv.innerHTML = `
+                  <button class="dropbtn">Welcome, ` + user.username + `</button>
+                  <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                  </div>
+                `;
             } else {
                 let loginButton = document.createElement("a");
                 loginButton.setAttribute("href", "/login-page");
@@ -49,7 +101,7 @@
             <a href="/login-page">Login</a>
             <a href="/addItem">Create</a>
             <a href="#contact">Contact</a>
-            <span id="user" style="float:right; color: white"></span>
+            <div id="user" class="dropdown" style="float:right; color: white"></div>
         </ul>
     </div>
 </header>
