--- a/src/main/resources/static/auctionList.css
+++ b/src/main/resources/static/auctionList.css
@@ -83,7 +83,8 @@ padding-top: 5px;
     transform: scale(1.1);
     transition: .6s;
 }
-button{
+
+.buy-1{
     text-align: center;
     font-size: 24px;
     color: #fff;
@@ -93,15 +94,21 @@ button{
     cursor: pointer;
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
-}
-.buy-1{
-
     background: #2183a2;
 }
 .save{
- background: #ff9f43;
+    text-align: center;
+    font-size: 24px;
+    color: #fff;
+    width: 100%;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    background: #ff9f43;
 }
 
 h1 {
- color: white;
+    color: white;
 }
