--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -5,6 +5,39 @@
     <title>Old World Auction</title>
     <link th:href="@{/styling.css}" rel="stylesheet"/>
     <link th:href="@{/common.css}" rel="stylesheet"/>
+    <link th:href="@{/login.css}" rel="stylesheet"/>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            fetch("/loggedUser")
+                .then(response => response.json())
+                .then(data => {
+                    displayUser(data);
+                })
+                .catch(error => {
+                    console.error('Error fetching data:', error);
+                });
+        });
+
+        function displayUser(user){
+            const userDiv = document.getElementById("user");
+            userDiv.innerHTML = "";
+            if(user.username != "") {
+                userDiv.innerHTML = `
+                  <button class="dropbtn">Welcome, ` + user.username + `</button>
+                  <div class="dropdown-content">
+                    <a href="#">Manage Account</a>
+                    <a href="#">Manage Items</a>
+                    <a href="/logout">Log Out</a>
+                  </div>
+                `;
+            } else {
+                let loginButton = document.createElement("a");
+                loginButton.setAttribute("href", "/login-page");
+                loginButton.textContent = "Login";
+                userDiv.appendChild(loginButton);
+            }
+        }
+    </script>
 </head>
 <body>
 <header>
@@ -13,9 +46,9 @@
             <a href="/">Home</a>
             <a href="/auctions-page">Auctions</a>
             <a href="/register-page">Register</a>
-            <a href="/login-page">Login</a>
             <a class="active">Create</a>
             <a href="#contact">Contact</a>
+            <div id="user" class="dropdown" style="float:right; color: white"></div>
         </ul>
     </div>
 </header>
@@ -71,7 +104,7 @@
 
     </form>
     <div style="text-align: center;">
-        <button form="itemAddForm" type="submit">Add Item</button>
+        <button id="submit" form="itemAddForm" type="submit">Add Item</button>
     </div>
 </body>
 </html>
