--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,51 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap" rel="stylesheet">
     <title>Home</title>
     <link th:href="@{/style.css}" rel="stylesheet"/>
-    <style>
-        /* Dropdown Button */
-        .dropbtn {
-          background-color: #04AA6D;
-          color: white;
-          padding: 16px;
-          font-size: 16px;
-          border: none;
-        }
-
-        /* The container <div> - needed to position the dropdown content */
-        .dropdown {
-          padding-right: 20px;
-          position: relative;
-          display: inline-block;
-        }
-
-        /* Dropdown Content (Hidden by Default) */
-        .dropdown-content {
-          display: none;
-          position: fixed;
-          background-color: black;
-          min-width: 160px;
-          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-          z-index: 1;
-        }
-
-        /* Links inside the dropdown */
-        .dropdown-content a {
-          min-width: 120px;
-          color: black;
-          padding: 12px 16px;
-          text-decoration: none;
-          display: block;
-        }
-
-        /* Change color of dropdown links on hover */
-        .dropdown-content a:hover {background-color: #ddd;}
-
-        /* Show the dropdown menu on hover */
-        .dropdown:hover .dropdown-content {display: block;}
-
-        /* Change the background color of the dropdown button when the dropdown content is shown */
-        .dropdown:hover .dropbtn {background-color: #3e8e41;}
-    </style>
+    <link th:href="@{/login.css}" rel="stylesheet"/>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             fetch("/loggedUser")
@@ -76,16 +32,16 @@
                 userDiv.innerHTML = `
                   <button class="dropbtn">Welcome, ` + user.username + `</button>
                   <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
+                    <a href="#">Manage Account</a>
+                    <a href="#">Manage Items</a>
+                    <a href="/logout">Log Out</a>
                   </div>
                 `;
             } else {
                 let loginButton = document.createElement("a");
                 loginButton.setAttribute("href", "/login-page");
                 loginButton.textContent = "Login";
-                userSpan.appendChild(loginButton);
+                userDiv.appendChild(loginButton);
             }
         }
     </script>
@@ -98,7 +54,6 @@
             <a class="active">Home</a>
             <a href="/auctions-page">Auctions</a>
             <a href="/register-page">Register</a>
-            <a href="/login-page">Login</a>
             <a href="/addItem">Create</a>
             <a href="#contact">Contact</a>
             <div id="user" class="dropdown" style="float:right; color: white"></div>
