--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -53,7 +53,7 @@
     </div>
 </header>
     <h1>Add Auction Item</h1>
-    <form id="itemAddForm" action="/add" method="post">
+    <form id="itemAddForm" action="/add" method="post" enctype="multipart/form-data">
         <p>
             <label for="name">Item Name: </label>
             <input id= "name" type="text" name="name" required/> <br/>
